# docker-fastapi

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
src/docker_fastapi/: __init__.py  database.py  main.py  models.py
